<resources>
    <string name="google_api_key_value">AIzaSyAowoC2lTSVNGAJZkimZBlPuxPy0so5a_A</string>
    <string name="app_name">Aladin</string>
    <string name="sologan">Mua may - Bán tốt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_button_item_product">Xem</string>
    <string name="text_edt_toolbar">Bạn tìm nhà ở đâu</string>
    <string name="search_near_by">Tìm kiếm gần đây</string>
    <string name="saved_post">Tin rao đã lưu</string>
    <string name="saved_search">Tìm kiếm đã lưu</string>
    <string name="saved_search_short">T.kiếm đã lưu</string>
    <string name="account_manage">Quản lí tài khoản</string>
    <string name="account">Tài khoản</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="introduction">Giới thiệu</string>
    <string name="feedback">Phản hồi</string>
    <string name="register_account">Đăng kí tài khoản</string>
    <string name="full_name">Họ và tên</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="email_address_username">Địa chỉ email/tên đăng nhập</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu(Ít nhất 6 kí tự)</string>
    <string name="now_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới(Ít nhất 6 kí tự)</string>
    <string name="show_password">Hiện mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="ok">OK</string>
    <string name="get_password">Lấy lại mật khẩu</string>
    <string name="infor_get_password">Một mật khẩu mới sẽ được gửi tới email của bạn. Hãy cho chúng tôi biết email của bạn:</string>
    <string name="map">Map</string>
    <string name="satellite">Vệ tinh</string>
    <string name="map_vietnamese">Bản đồ</string>
    <string name="list">List</string>
    <string name="posted_post_management">Quản lí tin</string>
    <string name="saved_post_short">Tin rao đã lưu</string>
    <string name="product_detail">Chi tiết</string>
    <string name="product_detail_map">Xem bản đồ</string>
    <string name="post_date">"Ngày đăng:  "</string>
    <string name="product_description">Thông tin mô tả</string>
    <string name="product_feature">Đặc điểm chi tiết</string>
    <string name="contact_information">Thông tin liên hệ</string>
    <string name="contact_name">Tên liên hệ</string>
    <string name="contact_number_phone">Số điện thoại liên hệ</string>
    <string name="please_select">Vui lòng chọn</string>
    <string name="normal_information">Thông tin cơ bản</string>
    <string name="address_information">Thông tin địa chỉ</string>
    <string name="detail_information">Thông tin chi tiết</string>
    <string name="province_city">Tỉnh/Thành phố</string>
    <string name="selected_province_city">Chọn tỉnh/thành phố</string>
    <string name="district">Quận/Huyện</string>
    <string name="selected_district">Chọn quận/huyện</string>
    <string name="address">Địa chỉ</string>
    <string name="price">Giá (VND)</string>
    <string name="price_2">Mức giá</string>
    <string name="from">Từ:</string>
    <string name="to">Đến:</string>
    <string name="next_to">Tiếp tục</string>
    <string name="previous_to">Quay lại</string>
    <string name="only_number">Chỉ nhập số</string>
    <string name="quality_bedrooms">Số phòng ngủ</string>
    <string name="quality_bathrooms">Số phòng tắm</string>
    <string name="description_information">Thông tin mô tả</string>
    <string name="max_2000_character">Tối đa chỉ 2000 kí tự</string>
    <string name="more_information">Thông tin khác</string>
    <string name="max_20_character">Tối đa 20 kí tự</string>
    <string name="legal">"Pháp lí    "</string>
    <string name="avartar_information">Ảnh đại diện</string>
    <string name="image_information">Thêm thông tin hình ảnh</string>
    <string name="image_detail">Hình ảnh chi tiết</string>
    <string name="select_picture">Chọn ảnh</string>
    <string name="add_picture">Thêm ảnh</string>
    <string name="add_new_product_successful">Bạn đã rao tin thành công. Chúng tôi sẽ xem xét và duyệt tin của bạn sớm nhất có thể. Xin cảm ơn!</string>
    <string name="add_new_post">Rao tin mới</string>
    <string name="exit_add_new_post">Bạn muốn thoát?</string>
    <string name="exit_add_new_post_without_save">Chưa lưu thông tin. Bạn muốn thoát ra</string>
    <string name="error_connect_notification">Lỗi kết nối. Vui lòng thử lại sau!</string>
    <string name="error_connect">Lỗi kết nối</string>
    <string name="error_read_data_notification">Lỗi đọc dữ liệu. Vui lòng thử lại sau!</string>
    <string name="error_read_data">Lỗi đọc dữ liệu</string>
    <string name="view_posted_product">Xem tin đã rao</string>
    <string name="login_width_facebook">Đăng nhập với facebook</string>
    <string name="login">Đăng nhập</string>
    <string name="user_control">Quản lí tài khoản</string>
    <string name="user_management">Quản lí người dùng</string>
    <string name="post_management">Quản lí bảng tin</string>
    <string name="update_user">Cập nhật tài khoản</string>
    <string name="log_out">Đăng xuất</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="register_user">Đăng ký tài khoản</string>
    <string name="recent_searches">Tìm kiếm gần đây</string>
    <string name="search">Tìm kiếm</string>
    <string name="filter_search">Lọc tìm kiếm</string>
    <string name="filter_list">Lọc danh sách</string>
    <string name="home">Trang chính</string>
    <string name="add_post">Rao tin</string>
    <string name="more_view">Hiển thị thêm</string>
    <string name="arrange_post_width">Sắp xếp tin rao theo</string>
    <string name="page_for_user_system">Trang dành cho user hệ thống</string>
    <string name="just_unapproved_post">Chỉ tin chưa duyệt</string>
    <string name="confirm_email">Xác nhận email</string>
    <string name="confirm_email_description">Một mã xác nhận đã được gửi đến mail của bạn. Nhập mã xác nhập để hoàn tất quá trình đăng kí</string>
    <string name="confirm_code">Mã xác nhận</string>
    <string name="resend_code">Gửi lại mã</string>
    <string name="cancel">Hủy</string>
    <string name="processing">Đang xử lí. Vui lòng đợi…</string>
    <string name="loading">Đang tải…</string>
    <string name="accept">Duyệt</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="view">Xem</string>
    <string name="image">Hình ảnh</string>
    <string name="information">Thông tin</string>
    <string name="description">Mô tả</string>
    <string name="location">Vị trí</string>
    <string name="map_view">Bản đồ</string>
    <string name="type_product">Loại nhà</string>
    <string name="area">Diện tích (m²)</string>
    <string name="save">Lưu</string>
    <string name="un_save">Bỏ lưu</string>
    <string name="save_temp">Tạm lưu</string>
    <string name="save_and_continue">Lưu và tiếp tục</string>
    <string name="house_information">Thông tin căn nhà</string>
    <string name="location_house">Vị trí căn nhà</string>
    <string name="no_data">Không có dữ liệu!</string>
    <string name="no_data_here">Không có dữ liệu ở địa điểm này!</string>
    <string name="please_zoom_to_view_list">Zoom lớn bản đồ để xem danh sách nhà!</string>
    <string name="please_zoom_to_view">Zoom lớn bản đồ để xem nhà được bán!</string>
    <string name="load_data_error">Lỗi tải dữ liệu!</string>
    <string name="post">Đăng bài</string>
    <string name="amenities">Tiện ích</string>
    <string name="disable_user">Khóa tài khoản</string>
    <string name="enable_user">Bỏ khóa tài khoản</string>
    <string name="diabled_user">Tạm khóa</string>
    <string name="sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="username">Tên đăng nhập</string>
    <string name="other_sex">Khác</string>
    <string name="architecture">Kiểu nhà</string>
    <string name="title">Tiêu đề</string>
    <string name="rent_house">Nhà thuê</string>
    <string name="house_for_sale">Nhà bán</string>
    <string name="beds">Beds</string>
    <string name="baths">Baths</string>
    <string name="bathroom">Phòng tắm</string>
    <string name="bedroom">Phòng ngủ</string>
    <string name="square">Sq. m²</string>
    <string name="for_one_month">/tháng</string>
    <string name="sort">Sắp xếp</string>
    <string name="save_search">Lưu t.kiếm</string>
    <string name="search_suggestion">"Địa điểm, quận/huyện, tỉnh/thành phố,…"</string>
    <string name="save_login">Lưu đăng nhập</string>
    <string name="map_information_text">Vui lòng chọn một vị trí trên map</string>
    <string name="confirm_edit_product">Chú ý! Nếu bạn chỉnh sửa bất kì thông tin nào của sản phẩm nó sẽ
        không nằm trên bản tin nữa cho đến khi bạn "đăng" lại và được duyệt</string>
    <string name="quality_prodcut">"Số lượng nhà trên bản đồ: "</string>
    <string name="saved_search_name">Tên tìm kiếm</string>
    <string name="finish">Hoàn tất</string>
    <string name="all">Tất cả</string>
    <string name="pending">Chờ duyệt</string>
    <string name="not_active">Tạm khóa</string>
    <string name="active">Hoạt động</string>
    <string name="posted">Đã đăng</string>
    <string name="status" >Trạng thái</string>
    <string name="formality" >Loại nhà</string>
    <string name="saved_information">Thông tin đã lưu</string>
    <string name="management">Quản lí</string>
    <string name="new_post_image">Đăng tin - 1/4 Hình ảnh</string>
    <string name="new_post_information">Đăng tin - 2/4 Thông tin</string>
    <string name="new_post_description">Đăng tin - 3/4 Mô tả</string>
    <string name="new_post_location">Đăng tin - 4/4 Vị trí</string>
    <string name="new_post_finish">Đăng tin - Hoàn tất</string>
    <string name="double_press_back_to_exit">Ấn thêm lần nữa để thoát khỏi ứng dụng</string>
    <string name="save_data_successful">Lưu thành công</string>
    <string name="error_save_data">Lỗi lưu dữ liệu</string>
    <string name="error">Lỗi</string>
    <string name="not_support_google_service">Thiết bị của bạn không hỗ trợ dịch vụ Google. Không thể mở app!</string>
    <string name="not_location_selected_can_not_save">Bạn chưa chọn vị trí nhà. Không thể lưu!</string>
    <string name="not_address_select_can_not_save">Chưa chọn quận/huyện. Không thể lưu!</string>
    <string name="data_incorrect_format">Dữ liệu không chính xác. Vui lòng kiểm tra lại!</string>
    <string name="select_architecture">Chọn kiểu nhà</string>
    <string name="select_type">Chọn loại nhà</string>
    <string name="select_amenities">Chọn tiện ích</string>
    <string name="call_phone">Gọi điện thoại</string>
    <string name="call_phone_first">"Bạn có muốn gọi điện thoại tới số "</string>
    <string name="call_phone_second">" không?"</string>
    <string name="send_mail">Gửi mail</string>
    <string name="send_mail_first">"Bạn có muốn gửi tin nhắn tới "</string>
    <string name="call_not_permission">Không cho phép thực hiện cuộc gọi</string>
    <string name="error_handle">Lỗi xử lí</string>
    <string name="send_a_mail">Gửi tin nhắn</string>
    <string name="unsave_successful">Bỏ lưu thành công</string>
    <string name="unsave_failed">Bỏ lưu không thành công!</string>
    <string name="error_connect_internet_notification">Không thể kết nối internet. Kiểm tra kết nối của bạn!</string>
    <string name="login_to_continue">Đăng nhập để tiếp tục</string>
</resources>