<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    android:padding="@dimen/_8dp">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/contact_information"
        android:textColor="@color/colorMain"
        android:textSize="@dimen/_13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/contact_name"
        android:textSize="@dimen/_9sp" />

    <EditText
        android:id="@+id/edt_contact_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@drawable/custom_edt_create_account"
        android:paddingLeft="@dimen/_5dp"
        android:textSize="@dimen/_9sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/contact_number_phone"
        android:textSize="@dimen/_9sp" />

    <EditText
        android:id="@+id/edt_contact_number_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@drawable/custom_edt_create_account"
        android:paddingLeft="@dimen/_5dp"
        android:textSize="@dimen/_9sp" />

    <LinearLayout
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_create_account"
            android:text="@string/save"
            android:id="@+id/btn_save"
            android:textSize="@dimen/_10sp"
            android:layout_marginRight="@dimen/_15dp"/>

        <Button
            android:layout_marginLeft="@dimen/_15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_create_account"
            android:text="@string/post"
            android:id="@+id/btn_post"
            android:textSize="@dimen/_10sp"/>

    </LinearLayout>

</LinearLayout>



