<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16dp"
        android:orientation="vertical"
        android:background="@color/colorMainBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_information"
            android:layout_gravity="center"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/colorMain"
            android:layout_marginBottom="@dimen/_10dp"
            android:id="@+id/txv_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avartar_information"
            android:textSize="@dimen/_10sp"
            android:layout_marginBottom="@dimen/_10dp" />

        <ImageView
            android:id="@+id/imv_avartar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:src="@drawable/icon_product"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/colorGray"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/btn_select_avartar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_picture"
                android:textSize="@dimen/_8sp"/>

            <Button
                android:id="@+id/btn_save_avartar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/_8sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_detail"
            android:textSize="@dimen/_10sp"
            android:layout_marginBottom="@dimen/_5dp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_view"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorWhite"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/colorGray"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_picture"
                android:textSize="@dimen/_8sp"/>

            <Button
                android:id="@+id/btn_save_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/_8sp"/>

        </LinearLayout>

        <Button
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_create_account"
            android:text="@string/next_to"
            android:id="@+id/btn_next_to"
            android:textSize="@dimen/_10sp"/>

    </LinearLayout>

</ScrollView>

