<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackground"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_25dp"
        android:paddingRight="@dimen/_25dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_10dp">

        <TextView
            android:id="@+id/txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textSize="@dimen/_12sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorMain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:singleLine="true"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:textSize="@dimen/_10sp"
            android:background="@drawable/custom_edt_main" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="@dimen/_10sp"
                android:id="@+id/txv_sex"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rdg_sex"
                android:layout_below="@id/txv_sex">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sp"
                    android:text="@string/male"
                    android:id="@+id/rdo_male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sp"
                    android:text="@string/female"
                    android:id="@+id/rdo_female"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sp"
                    android:text="@string/other"
                    android:id="@+id/rdo_other"
                    android:checked="true"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/_80dp"
                android:text="@string/birthday"
                android:id="@+id/txv_name_birthday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txv_birthday"
                android:layout_marginRight="@dimen/_70dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txv_name_birthday"
                android:text="04/07/2018"
                android:layout_marginTop="@dimen/_5dp"/>

            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:id="@+id/imv_calendar"
                android:layout_marginRight="@dimen/_70dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txv_birthday"
                android:text="04/07/2018"
                android:layout_marginTop="@dimen/_5dp"
                android:src="@drawable/icon_calendar"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_email_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_password"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"
            android:id="@+id/txv_now_password"/>

        <EditText
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_now_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:id="@+id/txv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:inputType="number"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:background="@drawable/custom_edt_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/_10sp"
            android:layout_marginTop="@dimen/_5dp"/>

        <EditText
            android:singleLine="true"
            android:paddingLeft="@dimen/_5dp"
            android:textSize="@dimen/_10sp"
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:background="@drawable/custom_edt_main"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:background="@drawable/custom_btn_main"
            android:text="@string/confirm"
            android:textSize="@dimen/_9sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</ScrollView>

